Remove parties link from loan as it could be calculated from loan_share Fix #1020 review : http://rietveld.coopengo.com/9290003/

--- a/modules/loan/view/ordered_loan_list.xml
+++ b/modules/loan/view/ordered_loan_list.xml
@@ -12,5 +12,5 @@
     </field>
     <field name="funds_release_date"/>
     <field name="first_payment_date"/>
-    <field name="parties_name"/>
+    <field name="insured_persons_name"/>
 </tree>
