--- a/modules/loan/view/loan_form_patch.xml
+++ b/modules/loan/view/loan_form_patch.xml
@@ -38,6 +38,6 @@
         <label name="deferal_duration"/>
         <field name="deferal_duration"/>
         <field name="increments" colspan="4" mode="tree"/>
-        <field name="parties" colspan="4" view_ids="party_cog.person_view_tree,party.party_view_form"/>
+        <field name="insured_persons" colspan="4" view_ids="party_cog.person_view_tree,party.party_view_form"/>
     </xpath>
 </data>
