process : add parameter to process.action http://rietveld.coopengo.com/2430001/

--- a/modules/process/view/action_form.xml
+++ b/modules/process/view/action_form.xml
@@ -6,5 +6,7 @@
   <field name="method_name"/>
   <label name="technical_kind"/>
   <field name="technical_kind"/>
+  <label name="parameters"/>
+  <field name="parameters"/>
   <field name="source_code" colspan="2"/>
 </form>
