Remove misleading date on process finder and drop support for functional process version review : http://rietveld.coopengo.com/8310003/

--- a/modules/process_cog/view/process_parameters_form.xml
+++ b/modules/process_cog/view/process_parameters_form.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form string="Process Start" col="4">
-  <label name="date"/>
-  <field name="date" colspan="3"/>
+<form string="Process Start">
   <label name="good_process"/>
   <field name="good_process" widget="selection"/>
   <label name="model"/>
