--- a/modules/contract_insurance_process/view/contract_subscribe_find_process_form.xml
+++ b/modules/contract_insurance_process/view/contract_subscribe_find_process_form.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
-    <xpath expr="/form/field[@name='date']" position="after">
-        <newline/>
-        <label name="dist_network"/>
-        <field name="dist_network"/>
-        <newline/>
-        <label name="com_product"/>
-        <field name="com_product"/>
+    <xpath expr="/form/label[@name='good_process']" position="before">
+        <label name="effective_date"/>
+        <field name="effective_date"/>
         <newline/>
         <label name="product"/>
         <field name="product" colspan="3"/>
