--- a/modules/contract/view/contract_form.xml
+++ b/modules/contract/view/contract_form.xml
@@ -50,5 +50,6 @@
     <newline/>
     <group id="button_change_start_date" states="{'invisible': True}">
         <button name="button_change_start_date" string="Change start date"/>
+        <button name="button_activate" string="Activate Contract"/>
     </group>
 </form>
