--- a/modules/contract/view/contract_form.xml
+++ b/modules/contract/view/contract_form.xml
@@ -51,5 +51,6 @@
     <group id="button_change_start_date" states="{'invisible': True}">
         <button name="button_change_start_date" string="Change start date"/>
         <button name="button_activate" string="Activate Contract"/>
+        <button name="button_decline" string="Decline Contract"/>
     </group>
 </form>
