--- a/modules/offered_insurance/view/document_create_preview_report_list.xml
+++ b/modules/offered_insurance/view/document_create_preview_report_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <tree string="Document Preview">
     <field name="generated_report" widget="url"/>
-    <field name="file_basename" expand="1" invisible="1" />
+    <field name="file_basename" expand="1"/>
 </tree>
