--- a/modules/commission_insurance_rule_engine/view/plan_form.xml
+++ b/modules/commission_insurance_rule_engine/view/plan_form.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <data>
-    <xpath expr="/form/field[@name='lines']" position="before">
+    <xpath expr="/form/notebook" position="before">
         <label name="rule_engine_key"/>
         <field name="rule_engine_key"/>
     </xpath>
