--- a/modules/contract_group_process/view/contract_subscribe_find_process_form.xml
+++ b/modules/contract_group_process/view/contract_subscribe_find_process_form.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
-    <xpath expr="/form/label[@name='com_product']" position="before">
+    <xpath expr="/form/label[@name='product']" position="before">
         <label name="is_group"/>
         <field name="is_group"/>
         <newline/>
