--- a/modules/bank_cog/view/bank_account_form.xml
+++ b/modules/bank_cog/view/bank_account_form.xml
@@ -7,7 +7,11 @@
         <label name="end_date"/>
         <field name="end_date"/>
     </xpath>
+    <xpath expr="/form/field[@name='bank']" position="after">
+        <label name="number"/>
+        <field name="number"/>
+    </xpath>
     <xpath expr="/form/field[@name='numbers']" position="replace_attributes">
-        <field name="numbers" pre_validate="1"/>
+        <field name="numbers" invisible="1"/>
     </xpath>
 </data>
