--- a/modules/process_cog/view/process_form.xml
+++ b/modules/process_cog/view/process_form.xml
@@ -14,5 +14,7 @@
   <xpath expr="/form/notebook/page[@id='xml']/group[@id='form_customization']/group[@id='customization_data']/field[@name='step_button_group_position']" position="after">
     <label name="with_prev_next"/>
     <field name="with_prev_next"/>
+    <label name="close_tab_on_completion"/>
+    <field name="close_tab_on_completion"/>
   </xpath>
 </data>
