contract_set_process : fix tree view of contracts http://rietveld.coopengo.com/6320002/

--- a/modules/contract_set_process/view/contract_in_contract_set_process_tree.xml
+++ b/modules/contract_set_process/view/contract_in_contract_set_process_tree.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<tree string="Contracts" readonly="1">
+<tree string="Contracts">
     <field name="quote_number"/>
     <field name="status"/>
     <field name="subscriber"/>
