--- a/modules/contract_insurance_invoice/view/premium_form.xml
+++ b/modules/contract_insurance_invoice/view/premium_form.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0"?>
 <form string="Premium">
+    <label name="parent"/>
+    <field name="parent"/>
     <label name="rated_entity"/>
     <field name="rated_entity"/>
     <label name="account"/>
