--- a/modules/commission_insurance/view/contract_form.xml
+++ b/modules/commission_insurance/view/contract_form.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <data>
-    <xpath expr="/form/notebook" position="before">
-        <label name="agent"/>
-        <field name="agent"/>
+    <xpath expr="/form/notebook/page[@id='admin']" position="before">
+        <page name="broker">
+            <label name="broker"/>
+            <field name="broker"/>
+            <label name="agent"/>
+            <field name="agent"/>
+        </page>
     </xpath>
 </data>
