--- a/modules/commission_insurance/view/commission_list.xml
+++ b/modules/commission_insurance/view/commission_list.xml
@@ -1,7 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
-  <xpath expr="/tree" position="inside">
-    <field name="commissionned_contract"/>
-    <field name="commissionned_option"/>
-  </xpath>
+    <xpath expr="/tree/field[@name='type_']" position="after">
+        <field name="party"/>
+    </xpath>
+    <xpath expr="/tree" position="inside">
+        <field name="commissionned_contract"/>
+        <field name="commissionned_option"/>
+        <field name="broker" tree_invisible="1"/>
+    </xpath>
+    <xpath expr="/tree/field[@name='currency']" position="replace"/>
+    <xpath expr="/tree/field[@name='type_']" position="replace_attributes">
+        <field name="type_" tree_invisible="1"/>
+    </xpath>
+    <xpath expr="/tree/field[@name='amount']" position="replace_attributes">
+        <field name="amount" sum="Amount"/>
+    </xpath>
 </data>
