--- a/modules/commission_multi_agents/view/plan_form.xml
+++ b/modules/commission_multi_agents/view/plan_form.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
-    <xpath expr="/form/notebook/page[@id='insurer_plans']"
-        position="after">
-            <page string="Commissioned Agents" id="commissioned_agents">
-                <field name="commissionned_agents" colspan="4"/>
-            </page>
+    <xpath expr="/form/notebook" position="inside">
+        <page string="Commissioned Agents" id="commissioned_agents" states="{'invisible': Eval('type_') != 'agent'}">
+            <field name="commissionned_agents" colspan="4"/>
+        </page>
     </xpath>
 </data>
 
