--- a/modules/contract/view/options_displayer_form.xml
+++ b/modules/contract/view/options_displayer_form.xml
@@ -5,4 +5,5 @@
     <newline/>
     <field name="options" colspan="4" mode="tree" expand_toolbar="0"/>
     <newline/>
+    <field name="with_package"/>
 </form>
