--- a/modules/party_cog/view/address_tree.xml
+++ b/modules/party_cog/view/address_tree.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
+    <xpath expr="/tree" position="replace_attributes">
+        <tree string="Addresses" tree_state="1"/>
+    </xpath>
     <xpath expr="/tree/field[@name='name']" position="before">
         <field name="start_date"/>
         <field name="end_date"/>
