--- a/modules/contract_insurance_invoice/view/premium_list.xml
+++ b/modules/contract_insurance_invoice/view/premium_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <tree string="Premiums">
-  <field name="rated_entity"/>
-  <field name="amount"/>
+  <field name="rec_name"/>
+  <field name="amount" sum="Amount"/>
   <field name="frequency"/>
   <field name="start"/>
   <field name="end"/>
