--- a/modules/commission_insurance/view/plan_line_form.xml
+++ b/modules/commission_insurance/view/plan_line_form.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <data>
-    <xpath expr="/form/label[@name='product']" position="replace">
-        <field name="options" colspan="4"/>
-    </xpath>
+    <xpath expr="/form/label[@name='product']" position="replace"/>
     <xpath expr="/form/field[@name='product']" position="replace"/>
     <xpath expr="/form/label[@name='sequence']" position="replace"/>
     <xpath expr="/form/field[@name='sequence']" position="replace"/>
+    <xpath expr="/form/field[@name='formula']" position="after">
+        <field name="options" colspan="4"/>
+    </xpath>
 </data>
