--- a/modules/task_manager/view/priority_form.xml
+++ b/modules/task_manager/view/priority_form.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form string="Priority" col="5">
-  <group id="definition" col="2" colspan="4">
-    <label name="team" xalign="0"/>
-    <field name="team"/>
-    <label name="process_step" xalign="0"/>
-    <field name="process_step"/>
-    <label name="kind" xalign="0"/>
-    <field name="kind"/>
-  </group>
+    <group id="definition" col="2" colspan="4">
+        <label name="team" xalign="0"/>
+        <field name="team"/>
+        <label name="process_step" xalign="0"/>
+        <field name="process_step"/>
+        <label name="nb_tasks"/>
+        <field name="nb_tasks"/>
+        <label name="task_name"/>
+        <field name="task_name"/>
+    </group>
 </form>
