--- a/modules/debug/view/model_info_form.xml
+++ b/modules/debug/view/model_info_form.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0"?>
-<form string="Model Debug">
+<form string="Model Debug" col="6">
   <label name="model_name"/>
   <field name="model_name"/>
   <label name="filter_value"/>
   <field name="filter_value"/>
-  <field name="field_infos" colspan="4" readonly="1"/>
   <label name="hide_functions"/>
   <field name="hide_functions"/>
+  <field name="field_infos" colspan="6" readonly="1"/>
   <label name="id_to_calculate"/>
   <field name="id_to_calculate"/>
+  <label name="must_raise_exception"/>
+  <field name="must_raise_exception"/>
+  <newline/>
   <label name="to_evaluate"/>
-  <field name="to_evaluate"/>
-  <label name="evaluation_result"/>
-  <field name="evaluation_result"/>
+  <field name="to_evaluate" colspan="5"/>
+  <field name="evaluation_result" colspan="6"/>
 </form>
