Do not authorize loan modification when linked to an active contract Fix #761 review : http://rietveld.coopengo.com/8390001/

--- a/modules/loan/view/loan_form.xml
+++ b/modules/loan/view/loan_form.xml
@@ -20,4 +20,6 @@
             string="Calculate Amortization Table"
             icon="tryton-go-next"/>
     </group>
+    <label name="is_used_on_active_contract"/>
+    <field name="is_used_on_active_contract"/>
 </form>
