--- a/modules/contract_insurance_invoice/view/premium_form.xml
+++ b/modules/contract_insurance_invoice/view/premium_form.xml
@@ -1,18 +1,7 @@
 <?xml version="1.0"?>
-<form string="Premium">
-    <label name="parent"/>
-    <field name="parent"/>
-    <label name="rated_entity"/>
-    <field name="rated_entity"/>
-    <label name="account"/>
-    <field name="account"/>
-    <label name="start"/>
-    <field name="start"/>
-    <label name="end"/>
-    <field name="end"/>
-    <label name="amount"/>
-    <field name="amount"/>
-    <label name="frequency"/>
-    <field name="frequency"/>
-    <field name="taxes" colspan="4"/>
-</form>
+<data>
+    <xpath expr="/form/field[@name='rated_entity']" position="after">
+        <label name="account"/>
+        <field name="account"/>
+    </xpath>
+</data>
