--- a/modules/contract_loan_invoice/view/product_form.xml
+++ b/modules/contract_loan_invoice/view/product_form.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
-    <xpath expr="/form/notebook/page[@id='managers']/notebook/page[@id='pricing']/field[@name='premium_rules']" position="before">
+    <xpath expr="/form/notebook/page[@id='managers']/notebook/page[@id='premium_data']/notebook" position="before">
         <label name="average_loan_premium_rule"/>
         <field name="average_loan_premium_rule"/>
     </xpath>
