--- a/modules/premium/view/product_form.xml
+++ b/modules/premium/view/product_form.xml
@@ -2,14 +2,9 @@
 <data>
     <xpath expr="/form/notebook/page[@id='managers']/notebook" position="inside">
         <page id="premium_data" string="Premium Data">
-            <notebook>
-                <page name="premium_dates">
-                    <field name="premium_dates" colspan="4" mode="form" expand_toolbar="0"/>
-                </page>
-                <page name="fees">
-                    <field name="fees"/>
-                </page>
-            </notebook>
+            <separator name="premium_dates" colspan="4"/>
+            <field name="premium_dates" colspan="4" mode="form" expand_toolbar="0"/>
+            <field name="fees" colspan="4"/>
         </page>
     </xpath>
 </data>
