endorsement_loan : Do not create a new version of shares if one exists that matches the effective date
Fix #1060
review http://rietveld.coopengo.com/1540001

--- a/modules/endorsement_loan/view/loan_share_selector_list.xml
+++ b/modules/endorsement_loan/view/loan_share_selector_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<tree string="Loan Shares" editable="bottom" colors="If(Bool(Eval('option_endorsement', False)), 'blue', 'grey')">
+<tree string="Loan Shares" editable="bottom" colors="If(Bool(Eval('new_share', False)), 'green', If(Not(Bool(Eval('previous_share', False))), 'blue', 'grey'))">
     <field name="contract"/>
     <field name="covered_element_name"/>
     <field name="option_name"/>
