--- a/modules/premium/view/premium_list.xml
+++ b/modules/premium/view/premium_list.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0"?>
 <tree string="Premium Rules">
-    <field name="start"/>
-    <field name="end"/>
+    <field name="rec_name"/>
     <field name="amount"/>
     <field name="frequency"/>
+    <field name="start"/>
+    <field name="end"/>
 </tree>
