endorsement_loan : Forbid to create new contracts from loan endorsemsent
Fix #1136
review http://rietveld.coopengo.com/9430001

--- a/modules/endorsement_loan/view/select_contracts_form.xml
+++ b/modules/endorsement_loan/view/select_contracts_form.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0"?>
 <form string="Select Contracts to Update">
-    <field name="selected_contracts" colspan="4"/>
+    <field name="selected_contracts" colspan="4" mode="tree" expand_toolbar="0"/>
 </form>
