event_log : fix event log form view http://rietveld.coopengo.com/9460002/

--- a/modules/event_log/view/event_log_form.xml
+++ b/modules/event_log/view/event_log_form.xml
@@ -7,7 +7,7 @@
     <label name="event_type"/>
     <field name="event_type"/>
     <label name="object_"/>
-    <field name="object_" widget="many2one"/>
+    <field name="object_"/>
     <label name="description"/>
     <field name="description"/>
 </form>
