--- a/modules/endorsement_insurance_invoice/view/change_billing_information_form.xml
+++ b/modules/endorsement_insurance_invoice/view/change_billing_information_form.xml
@@ -8,13 +8,13 @@
         <label name="contract"/>
         <field name="contract"/>
     </group>
-    <group id="existing" colspan="4" yexpand="1" yfill="1">
+    <group name="current_value" colspan="4" yexpand="1" yfill="1">
         <field name="current_value" mode="form" expand_toolbar="0" view_ids="contract_insurance_invoice.contract_billing_information_view_form"/>
     </group>
-    <group id="new" colspan="4" yexpand="1" yfill="1">
+    <group name="new_value" colspan="4" yexpand="1" yfill="1">
         <field name="new_value" mode="form" expand_toolbar="0" view_ids="contract_insurance_invoice.contract_billing_information_view_form"/>
     </group>
-    <group id="future" colspan="4" yexpand="1" yfill="1">
+    <group name="future_value" colspan="4" yexpand="1" yfill="1">
         <field name="future_value" mode="form" expand_toolbar="0" view_ids="contract_insurance_invoice.contract_billing_information_view_form"/>
     </group>
     <label name="delete_future"/>
