account_payment_cog : FIX #975 create reject fee invoice

--- a/modules/account_payment_cog/view/configuration_form.xml
+++ b/modules/account_payment_cog/view/configuration_form.xml
@@ -4,5 +4,7 @@
         position="after">
         <label name="direct_debit_journal"/>
         <field name="direct_debit_journal"/>
+        <label name="reject_fee_journal"/>
+        <field name="reject_fee_journal"/>
     </xpath>
 </data>
