--- a/modules/account_payment_cog/view/payment_journal_failure_action_list.xml
+++ b/modules/account_payment_cog/view/payment_journal_failure_action_list.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0"?>
-<tree string="Payment Journal Failure Actions">
+<tree string="Payment Journal Failure Actions" editable="bottom">
     <field name="journal"/>
     <field name="reject_reason"/>
+    <field name="is_fee_required"/>
+    <field name="rejected_payment_fee"/>
     <field name="action"/>
 </tree>
