--- a/modules/account_payment_cog/view/payment_journal_form.xml
+++ b/modules/account_payment_cog/view/payment_journal_form.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0"?>
 <data>
     <xpath expr="/form/field[@name='process_method']" position="after">
+    	<label name="default_reject_fee"/>
+    	<field name="default_reject_fee"/>
         <field name="failure_actions" colspan="4"/>
     </xpath>
 </data>
