coopbusiness : Do not display tags with multiselection as it is not user friendly review : http://rietveld.coopengo.com/5790004/

--- a/modules/offered_insurance/view/document_template_form.xml
+++ b/modules/offered_insurance/view/document_template_form.xml
@@ -26,7 +26,7 @@
             <field name="mail_body" colspan="2"/>
         </page>
         <page name="tags">
-            <field name="tags" colspan="4" widget="multiselection"/>
+            <field name="tags" colspan="4"/>
         </page>
     </notebook>
 </form>
