--- a/modules/table/view/table_definition_form.xml
+++ b/modules/table/view/table_definition_form.xml
@@ -16,7 +16,7 @@
             <newline/>
         </page>
         <page name="tags">
-            <field name="tags" colspan="4" widget="multiselection"/>
+            <field name="tags" colspan="4"/>
         </page>
     </notebook>
 </form>
