--- a/modules/process/view/process_form.xml
+++ b/modules/process/view/process_form.xml
@@ -22,7 +22,7 @@
             <field name="transitions" yfill="1" colspan="2"/>
         </page>
         <page name="tags">
-            <field name="tags" colspan="4" widget="multiselection"/>
+            <field name="tags" colspan="4"/>
         </page>
         <page string="XML" id="xml">
             <group id="form_customization" col="2" yexpand="1" yfill="1">
