--- a/modules/process/view/step_form.xml
+++ b/modules/process/view/step_form.xml
@@ -23,7 +23,7 @@
       <field name="exiting_wizard"/>
     </page>
     <page name="tags">
-      <field name="tags" colspan="4" widget="multiselection"/>
+      <field name="tags" colspan="4"/>
     </page>
     <page string="Authorizations" id="authorizations">
       <field name="authorizations" xexpand="1" xfill="1" yexpand="1" yfill="1"/>
