--- a/modules/rule_engine/view/rule_engine_form.xml
+++ b/modules/rule_engine/view/rule_engine_form.xml
@@ -4,6 +4,8 @@
   <field name="name"/>
   <label name="short_name"/>
   <field name="short_name"/>
+  <label name="type_"/>
+  <field name="type_"/>
   <label name="context"/>
   <field name="context"/>
   <label name="status"/>
