--- a/modules/offered/view/product_list.xml
+++ b/modules/offered/view/product_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tree string="Offered">
+<tree string="Products">
     <field name="code"/>
     <field name="name"/>
     <field name="start_date"/>
