--- a/modules/contract_insurance_invoice/view/premium_notice_view_list.xml
+++ b/modules/contract_insurance_invoice/view/premium_notice_view_list.xml
@@ -9,4 +9,5 @@
     </field>
     <field name="amount_to_pay_today"/>
     <field name="contract"/>
+    <field name="reconciliation_date"/>
 </tree>
