--- a/modules/premium/view/fee_form.xml
+++ b/modules/premium/view/fee_form.xml
@@ -5,7 +5,8 @@
     <label name="code"/>
     <field name="code"/>
     <label name="type"/>
-    <field name="type" colspan="3"/>
+    <field name="type"/>
+    <newline/>
     <group col="1" id="label_amount_rate">
         <label name="amount" yfill="1" xexpand="1" yexpand="1"/>
         <label name="rate" yfill="1" xexpand="1" yexpand="1"/>
