account_aggregate: Fix #1243: Add move date as parameters for aggregate https://redmine.coopengo.com/issues/1243 http://rietveld.coopengo.com/7520001

--- a/modules/account_aggregate/view/move_line_aggregated_list.xml
+++ b/modules/account_aggregate/view/move_line_aggregated_list.xml
@@ -4,6 +4,7 @@
     <field name="snapshot"/>
     <field name="account"/>
     <field name="journal"/>
+    <field name="date"/>
     <field name="post_date"/>
     <field name="description"/>
     <field name="debit"/>
