--- a/modules/account_aggregate/view/move_line_aggregated_form.xml
+++ b/modules/account_aggregate/view/move_line_aggregated_form.xml
@@ -8,6 +8,8 @@
     <field name="account"/>
     <label name="journal"/>
     <field name="journal"/>
+    <label name="date"/>
+    <field name="date"/>
     <label name="post_date"/>
     <field name="post_date"/>
     <label name="description"/>
