distribution: module reboot and replace broker notion with distribution network review : http://rietveld.coopengo.com/1680001/

--- a/modules/commission_insurance/view/contract_form.xml
+++ b/modules/commission_insurance/view/contract_form.xml
@@ -6,6 +6,8 @@
             <field name="broker"/>
             <label name="agent"/>
             <field name="agent"/>
+            <label name="agency"/>
+            <field name="agency"/>
         </page>
     </xpath>
 </data>
