--- a/modules/distribution/view/distribution_network_list.xml
+++ b/modules/distribution/view/distribution_network_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <tree string="Distribution Network">
-    <field name="name"/>
+    <field name="code"/>
+    <field name="full_name"/>
     <field name="parent" tree_invisible="1"/>
     <field name="childs" tree_invisible="1"/>
 </tree>
