contract_insurance_health_fr: Fix #1251 Use SESAM orgdest file https://redmine.coopengo.com/issues/1251 http://rietveld.coopengo.com/4560002

--- a/modules/contract_insurance_health_fr/view/party_complement_form.xml
+++ b/modules/contract_insurance_health_fr/view/party_complement_form.xml
@@ -6,6 +6,8 @@
         <field name="hc_system"/>
         <label name="department"/>
         <field name="department" xexpand="0"/>
+        <label name="insurance_fund_number"/>
+        <field name="insurance_fund_number"/>
         <label name="insurance_fund"/>
         <field name="insurance_fund"/>
     </xpath>
