--- a/modules/commission_multi_agents/view/agent_form.xml
+++ b/modules/commission_multi_agents/view/agent_form.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
-    <xpath expr="/form/field[@name='currency']"
-        position="after">
+    <xpath expr="/form" position="inside">
         <newline/>
         <label name="commissioned_with_agent"/>
         <field name="commissioned_with_agent" colspan="3"/>
