endorsement_full_contract_revision : Update to use add_endorsement_step
review http://rietveld.coopengo.com/2710001

--- a/modules/endorsement_full_contract_revision/view/full_contract_revision_form.xml
+++ b/modules/endorsement_full_contract_revision/view/full_contract_revision_form.xml
@@ -9,8 +9,8 @@
     <newline/>
     <label name="current_start_date"/>
     <field name="current_start_date"/>
-    <label name="new_start_date"/>
-    <field name="new_start_date"/>
+    <label name="start_date"/>
+    <field name="start_date"/>
     <group id="void_group" string="" yexpand="1" yfill="1" colspan="4">
     </group>
     <image name="tryton-dialog-warning" xexpand="0" xfill="0"/>
