commission_insurance: Add tags for commission plan Fix #1259

--- a/modules/commission_insurance/view/plan_form.xml
+++ b/modules/commission_insurance/view/plan_form.xml
@@ -12,6 +12,9 @@
             <page name="commissioned_products">
                 <field name="commissioned_products"/>
             </page>
+            <page name="tags">
+                <field name="tags"/>
+            </page>
         </notebook>
     </xpath>
     <xpath expr="/form/notebook" position="before">
