contract_insurance_process : Add subscription wizard to action from party review: http://rietveld.coopengo.com/4400001/

--- a/modules/contract_insurance_process/view/contract_subscribe_find_process_form.xml
+++ b/modules/contract_insurance_process/view/contract_subscribe_find_process_form.xml
@@ -7,5 +7,7 @@
         <label name="product"/>
         <field name="product" colspan="3"/>
         <newline/>
+        <label name="party"/>
+        <field name="party" colspan="3"/>
     </xpath>
 </data>
