party_cog: Remove user_name from contact_mechanism review: http://rietveld.coopengo.com/5930002/

--- a/modules/party_cog/view/party_interaction_list.xml
+++ b/modules/party_cog/view/party_interaction_list.xml
@@ -4,5 +4,5 @@
     <field name="contact_datetime"/>
     <field name="media"/>
     <field name="title"/>
-    <field name="user_name"/>
+    <field name="user"/>
 </tree>
