rule_engine: Move logs to relate and add calculation date to log review: http://rietveld.coopengo.com/5920004/

--- a/modules/rule_engine/view/execution_log_form.xml
+++ b/modules/rule_engine/view/execution_log_form.xml
@@ -4,6 +4,9 @@
   <field name="user"/>
   <label name="result"/>
   <field name="result"/>
+  <label name="calculation_date"/>
+  <field name="calculation_date"/>
+  <newline/>
   <group id="results" col="1" colspan="2" yexpand="1" yfill="1">
       <separator name="debug"/>
       <field name="debug"/>
