--- a/modules/premium/view/product_form.xml
+++ b/modules/premium/view/product_form.xml
@@ -3,7 +3,7 @@
     <xpath expr="/form/notebook/page[@id='managers']/notebook" position="inside">
         <page id="premium_data" string="Premium Data">
             <separator name="premium_dates" colspan="4"/>
-            <field name="premium_dates" colspan="4" mode="form" expand_toolbar="0"/>
+            <field name="premium_dates" colspan="4" mode="tree"/>
             <field name="fees" colspan="4"/>
         </page>
     </xpath>
