--- a/modules/contract/view/activation_history_list.xml
+++ b/modules/contract/view/activation_history_list.xml
@@ -2,4 +2,5 @@
 <tree string="Activation History">
     <field name="start_date"/>
     <field name="end_date"/>
+    <field name="termination_reason"/>
 </tree>
