--- a/modules/contract/view/contract_end_select_date_form.xml
+++ b/modules/contract/view/contract_end_select_date_form.xml
@@ -2,4 +2,6 @@
 <form string="Select End Date">
     <label name="end_date"/>
     <field name="end_date"/>
+    <label name="termination_reason"/>
+    <field name="termination_reason"/>
 </form>
