event_log: improve event_log form and make description as char (not text) http://rietveld.coopengo.com/3810001

--- a/modules/event_log/view/event_log_form.xml
+++ b/modules/event_log/view/event_log_form.xml
@@ -9,5 +9,5 @@
     <label name="object_"/>
     <field name="object_"/>
     <label name="description"/>
-    <field name="description"/>
+    <field name="description" colspan="3"/>
 </form>
