loan: Allow user to force loan modification even if there is another active contract using it Fix #1337 review: http://rietveld.coopengo.com/2720002/

--- a/modules/loan/view/loan_share_form.xml
+++ b/modules/loan/view/loan_share_form.xml
@@ -3,6 +3,9 @@
     <label name="loan"/>
     <field name="loan"/>
     <newline/>
+    <label name="option"/>
+    <field name="option"/>
+    <newline/>
     <label name="share"/>
     <group id="share">
       <field name="share" xexpand="0" factor="100"/>
