contract: Display parent contract or parent covered element on option review: http://rietveld.coopengo.com/7570001/

--- a/modules/contract/view/option_form.xml
+++ b/modules/contract/view/option_form.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form string="option">
+<form string="Option">
+    <label name="contract"/>
+    <field name="contract"/>
+    <newline/>
     <notebook colspan="4">
         <page string="Main Data" id="main_data">
             <label name="coverage"/>
