--- a/modules/contract_insurance/view/option_form.xml
+++ b/modules/contract_insurance/view/option_form.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
+    <xpath expr="/form/notebook" position="before">
+        <label name="covered_element"/>
+        <field name="covered_element"/>
+        <newline/>
+    </xpath>
     <xpath expr="/form/notebook/page[@id='main_data']" position="inside">
         <newline/>
         <field name="extra_data" colspan="2" no_command="1"/>
