--- a/modules/contract/view/option_list.xml
+++ b/modules/contract/view/option_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tree string="option">
+<tree string="Options">
     <field name="contract"/>
     <field name="coverage"/>
 </tree>
