contract : Add Stop Contract wizard
review http://rietveld.coopengo.com/1740001

--- a/modules/endorsement/view/endorsement_definition_list.xml
+++ b/modules/endorsement/view/endorsement_definition_list.xml
@@ -2,4 +2,5 @@
 <tree string="Endorsement Definitions">
     <field name="code"/>
     <field name="name"/>
+    <field name="is_technical"/>
 </tree>
