endorsement_premium : display premium rec_name in preview http://rietveld.coopengo.com/2760001/

--- a/modules/endorsement_premium/view/contract_preview_premium_list.xml
+++ b/modules/endorsement_premium/view/contract_preview_premium_list.xml
@@ -5,6 +5,5 @@
     <field name="amount" sum="amount">
         <suffix name="currency_symbol"/>
     </field>
-    <field name="option"/>
-    <field name="option_covered_element"/>
+    <field name="name"/>
 </tree>
