endorsement : display subscribers names and contracts number in endorsement parts and endorsements http://rietveld.coopengo.com/770001/

--- a/modules/endorsement_process/view/endorsement_part_list.xml
+++ b/modules/endorsement_process/view/endorsement_part_list.xml
@@ -2,5 +2,6 @@
 <tree string="Endorsement Parts">
     <field name="contracts_name"/>
     <field name="name"/>
+    <field name="subscribers_name"/>
     <button name="button_modify" string="Modify"/>
 </tree>
