--- a/modules/endorsement/view/endorsement_list.xml
+++ b/modules/endorsement/view/endorsement_list.xml
@@ -6,6 +6,8 @@
     <field name="state"/>
     <field name="application_date"/>
     <field name="applied_by"/>
+    <field name="contracts_name"/>
+    <field name="subscribers_name"/>
     <button string="Cancel" name="cancel" tree_invisible="1"/>
     <button string="Apply" name="apply" tree_invisible="1"/>
     <button string="Open Contract" name="open_contract" tree_invisible="1"/>
