--- a/modules/endorsement_set_process/view/endorsement_in_endorsement_set_process_tree.xml
+++ b/modules/endorsement_set_process/view/endorsement_in_endorsement_set_process_tree.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
 <tree string="Endorsements">
     <field name="contracts_name"/>
+    <field name="subscribers_name"/>
     <button name="button_preview_changes" string="Preview Changes"/>
 </tree>
