claim: Fix issues on claim creation review: http://rietveld.coopengo.com/9620001/

--- a/modules/claim/view/claim_form.xml
+++ b/modules/claim/view/claim_form.xml
@@ -18,6 +18,8 @@
   <newline/>
   <label name="claimant"/>
   <field name="claimant"/>
+  <label name="main_contract"/>
+  <field name="main_contract"/>
   <newline/>
   <notebook>
     <page string="Losses" id="losses">
