commission_insurer: Set invoice date to today, add option to wizard to post invoices, allow to generate all insurer invoices at once and add default description for invoice line review: http://rietveld.coopengo.com/5990002/

--- a/modules/commission_insurer/view/commission_create_invoice_principal_ask_form.xml
+++ b/modules/commission_insurer/view/commission_create_invoice_principal_ask_form.xml
@@ -2,9 +2,12 @@
 <form string="Create Commission Invoice Principal">
     <label name="company"/>
     <field name="company"/>
-    <label name="party"/>
-    <field name="party"/>
     <label name="journal"/>
     <field name="journal"/>
-    <field name="description" colspan="4"/>
+    <newline/>
+    <label name="description"/>
+    <field name="description" yfill="0" yexpand="0"/>
+    <label name="post_invoices"/>
+    <field name="post_invoices"/>
+    <field name="insurers" colspan="4"/>
 </form>
