--- a/modules/commission_insurance/view/agent_form.xml
+++ b/modules/commission_insurance/view/agent_form.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <data>
     <xpath expr="/form" position="inside">
+        <newline/>
         <label name="start_date"/>
         <field name="start_date"/>
         <label name="end_date"/>
