loan: Fix #1359: Allow to enter the loan duration in month or year, regardless of the payment frequency review: http://rietveld.coopengo.com/8680001/

--- a/modules/loan/view/ordered_loan_list.xml
+++ b/modules/loan/view/ordered_loan_list.xml
@@ -7,6 +7,7 @@
         <suffix string="%"/>
     </field>
     <field name="number_of_payments"/>
+    <field name="payment_frequency"/>
     <field name="amount">
         <suffix name="currency_symbol"/>
     </field>
