--- a/modules/account_payment_cog/view/payment_journal_reject_reason_form.xml
+++ b/modules/account_payment_cog/view/payment_journal_reject_reason_form.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<form string="Payment Journal Reject Code">
+<form string="Reject Reason">
     <label name="code"/>
     <field name="code"/>
     <label name="description"/>
