coopbusiness : Do not display DateTime fields in tree views
Fix #1506
review http://rietveld.coopengo.com/7760001

--- a/modules/event_log/view/event_log_list.xml
+++ b/modules/event_log/view/event_log_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <tree>
-    <field name="date"/>
+    <field name="date_str"/>
     <field name="user"/>
     <field name="event_type"/>
     <field name="object_"/>
