--- a/modules/endorsement/view/endorsement_list.xml
+++ b/modules/endorsement/view/endorsement_list.xml
@@ -4,7 +4,7 @@
     <field name="number"/>
     <field name="definition"/>
     <field name="state"/>
-    <field name="application_date"/>
+    <field name="application_date_str"/>
     <field name="applied_by"/>
     <field name="contracts_name"/>
     <field name="subscribers_name"/>
