--- a/modules/process_cog/view/process_log_tree.xml
+++ b/modules/process_cog/view/process_log_tree.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <tree string="Logs">
   <field name="user"/>
-  <field name="start_time"/>
+  <field name="start_time_str"/>
   <field name="from_state"/>
   <field name="to_state"/>
   <field name="locked"/>
