report_engine: remove printable functionality from offered_insurance
fix #808:'Remove printable functionality from offered_insurance and create a new printing module'
http://rietveld.coopengo.com/3780001

--- a/modules/report_engine/view/document_create_preview_form.xml
+++ b/modules/report_engine/view/document_create_preview_form.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form string="Documents">
+<form string="Reports">
     <field name="reports" colspan="4"/>
     <label name="output_report_name"/>
     <field name="output_report_name" colspan="3"/>
