--- a/modules/report_engine/view/report_template_form.xml
+++ b/modules/report_engine/view/report_template_form.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form string="Document Template">
+<form string="Report Template">
     <label name="name" xalign="0"/>
     <field name="name"/>
     <label name="code" xalign="0"/>
