--- a/modules/report_engine/view/report_template_list.xml
+++ b/modules/report_engine/view/report_template_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tree string="Document Templates">
+<tree string="Report Templates">
   <field name="name"/>
   <field name="code"/>
   <field name="on_model"/>
