--- a/modules/report_engine/view/report_template_version_list.xml
+++ b/modules/report_engine/view/report_template_version_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tree string="Document Template Versions" editable="bottom">
+<tree string="Report Template Versions" editable="bottom">
     <field name="resource"/>
     <field name="name"/>
     <field name="start_date"/>
