contract_clause: Fix #1381 Allow to select several clauses at the same time review: http://rietveld.coopengo.com/8690001/

--- a/modules/contract_clause/view/contract_form.xml
+++ b/modules/contract_clause/view/contract_form.xml
@@ -2,7 +2,7 @@
 <data>
     <xpath expr="/form/notebook/page[@id='admin']" position="before">
         <page name="clauses">
-            <field name="clauses"/>
+            <field name="clauses" product="clause"/>
         </page>
     </xpath>
 </data>
