--- a/modules/contract/view/contract_form.xml
+++ b/modules/contract/view/contract_form.xml
@@ -57,5 +57,6 @@
         <button name="button_decline" string="Decline Contract"/>
         <button name="button_hold" string="Hold Contract"/>
         <button name="button_stop" string="Stop Contract"/>
+        <button name="button_reactivate" string="Reactivate Contract"/>
     </group>
 </form>
