offered_insurance: Add active field to extra premium kind review: http://rietveld.coopengo.com/11160001/

--- a/modules/offered_insurance/view/extra_premium_kind_form.xml
+++ b/modules/offered_insurance/view/extra_premium_kind_form.xml
@@ -4,6 +4,8 @@
     <field name="name"/>
     <label name="code"/>
     <field name="code"/>
+    <label name="active"/>
+    <field name="active"/>
     <label name="is_discount"/>
     <field name="is_discount"/>
     <newline/>
