--- a/modules/contract_insurance_invoice/view/contract_form.xml
+++ b/modules/contract_insurance_invoice/view/contract_form.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0"?>
 <data>
-    <xpath expr="/form/notebook/page[@id='admin']" position="before">
-        <page string="Invoicing" id="invoicing">
-            <field name="billing_informations" colspan="4"/>
-        </page>
+    <xpath expr="/form/notebook/page[@id='invoicing']/field[@name='fees']" position="before">
+        <field name="billing_informations" colspan="4"/>
     </xpath>
 </data>
