--- a/modules/premium/view/contract_form.xml
+++ b/modules/premium/view/contract_form.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0"?>
 <data>
+    <xpath expr="/form/notebook/page[@id='admin']" position="before">
+        <page string="Invoicing" id="invoicing">
+            <field name="fees" colspan="4"/>
+        </page>
+    </xpath>
     <xpath expr="/form/group[@id='button_change_start_date']" position="inside">
         <button string="Display Premium" name="button_display_premium"/>
     </xpath>
