--- a/modules/contract_insurance/view/covered_element_form.xml
+++ b/modules/contract_insurance/view/covered_element_form.xml
@@ -13,6 +13,7 @@
     <newline/>
     <label name="party"/>
     <field name="party"/>
+    <field name="covered_name" invisible="1"/>
     <newline/>
     <notebook>
         <page id="data" string="Extra Data">
