report_engine: remove dependancy to offered Fix #1584:https://redmine.coopengo.com/issues/1584 http://rietveld.coopengo.com/10180001/

--- a/modules/offered/view/product_form.xml
+++ b/modules/offered/view/product_form.xml
@@ -29,4 +29,9 @@
         <label name="subscriber_kind"/>
         <field name="subscriber_kind"/>
     </xpath>
+    <xpath expr="/form/notebook/page[@id='admin']" position="before">
+        <page string="Report Templates" id="report_templates">
+            <field name="report_templates" colspan="4"/>
+        </page>
+    </xpath>
 </data>
