--- a/modules/contract_insurance_payment/view/payment_journal_form.xml
+++ b/modules/contract_insurance_payment/view/payment_journal_form.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <data>
-    <xpath expr="/form/field[@name='post_clearing_move']" position="after">
+    <xpath expr="/form/field[@name='process_method']" position="after">
         <label name="failure_billing_mode"/>
         <field name="failure_billing_mode" />
     </xpath>
