contract_insurance : merge options and extra-data tabs in covered element form http://rietveld.coopengo.com/990001/

--- a/modules/contract_insurance/view/covered_element_form.xml
+++ b/modules/contract_insurance/view/covered_element_form.xml
@@ -16,11 +16,8 @@
     <field name="covered_name" invisible="1"/>
     <newline/>
     <notebook>
-        <page id="data" string="Extra Data">
-            <field name="extra_data" colspan="2" no_command="1"/>
-            <newline/>
-        </page>
-        <page id="options" string="Options">
+        <page id="details" string="Details">
+            <field name="extra_data" colspan="4" no_command="1"/>
             <field name="options" colspan="4"/>
         </page>
         <page id="covered_relations" string="Covered Relations"
