--- a/modules/contract_insurance_health_fr/view/covered_element_form.xml
+++ b/modules/contract_insurance_health_fr/view/covered_element_form.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
-    <xpath expr="/form/notebook/page[@id='data']/field[@name='extra_data']" position="after">
+    <xpath expr="/form/notebook/page[@id='details']/field[@name='extra_data']" position="after">
         <newline/>
         <label name="is_law_madelin"/>
         <field name="is_law_madelin"/>
