--- a/modules/health/view/covered_element_form.xml
+++ b/modules/health/view/covered_element_form.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
-    <xpath expr="/form/notebook/page[@id='data']" position="inside">
+    <xpath expr="/form/notebook/page[@id='details']" position="inside">
         <field name="health_complement" colspan="4"/>
         <newline/>
     </xpath>
