--- a/modules/contract/view/contract_tree.xml
+++ b/modules/contract/view/contract_tree.xml
@@ -4,5 +4,6 @@
     <field name="subscriber"/>
     <field name="status"/>
     <field name="start_date"/>
+    <field name="end_date"/>
     <field name="product"/>
 </tree>
