account_payment_cog: Improve reject payment management Fix #1549: https://redmine.coopengo.com/issues/1549 http://rietveld.coopengo.com/11170002

--- a/modules/account_payment_cog/view/payment_journal_failure_action_form.xml
+++ b/modules/account_payment_cog/view/payment_journal_failure_action_form.xml
@@ -6,6 +6,8 @@
     <field name="reject_reason"/>
     <label name="action"/>
     <field name="action"/>
+    <label name="reject_number"/>
+    <field name="reject_number"/>
     <label name="is_fee_required"/>
     <field name="is_fee_required"/>
     <label name="rejected_payment_fee"/>
