Search coverage with product name or code Fix #1727 review: http://rietveld.coopengo.com/9940002/

--- a/modules/offered/view/option_description_list.xml
+++ b/modules/offered/view/option_description_list.xml
@@ -2,6 +2,7 @@
 <tree string="Coverages">
     <field name="name"/>
     <field name="code"/>
+    <field name="products_name"/>
     <field name="start_date"/>
     <field name="end_date"/>
     <field name="tags_name"/>
