--- a/modules/contract_insurance_invoice_dunning/view/product_form.xml
+++ b/modules/contract_insurance_invoice_dunning/view/product_form.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <data>
-    <xpath expr="/form/notebook/page[@id='admin']/group[@id='left']/field[@name='account_for_billing']" position="after">
+    <xpath expr="/form/notebook/page[@id='admin']/group[@id='left']" position="inside">
         <label name="dunning_procedure"/>
         <field name="dunning_procedure"/>
     </xpath>
