rule_engine : Use separate columns for date and time of creation_date
Fix #1604
review http://rietveld.coopengo.com/13070001

--- a/modules/rule_engine/view/execution_log_list.xml
+++ b/modules/rule_engine/view/execution_log_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <tree string="Rule Executions">
-    <field name="create_date_"/>
+    <field name="create_date_" widget="date"/>
+    <field name="create_date_" widget="time" string=""/>
     <field name="calculation_date"/>
     <field name="user"/>
     <field name="result"/>
