--- a/modules/account_cog/view/test_case_form.xml
+++ b/modules/account_cog/view/test_case_form.xml
@@ -6,6 +6,8 @@
     <field name="fiscal_year_sync_date"/>
     <label name="fiscal_year_periods_frequency"/>
     <field name="fiscal_year_periods_frequency"/>
+    <label name="fiscal_year_number"/>
+    <field name="fiscal_year_number"/>
     <label name="account_template"/>
     <field name="account_template"/>
     <newline/>
