--- a/modules/commission_insurance/view/plan_form.xml
+++ b/modules/commission_insurance/view/plan_form.xml
@@ -7,12 +7,10 @@
     <xpath expr="/form/field[@name='lines']" position="replace">
         <notebook colspan="4">
             <page name="lines">
-                <field name="lines" colspan="4" view_ids="commission.plan_line_view_list_sequence"/>
-            </page>
-            <page name="commissioned_products">
+                <field name="lines" colspan="2" view_ids="commission.plan_line_view_list_sequence"/>
                 <field name="commissioned_products"/>
             </page>
-            <page name="tags">
+            <page id="admin" string="Administration">
                 <field name="tags"/>
             </page>
         </notebook>
