--- a/modules/premium_commission/view/plan_form.xml
+++ b/modules/premium_commission/view/plan_form.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <data>
-    <xpath expr="/form" position="inside">
-        <field name="fees" colspan="4"/>
+    <xpath expr="/form/notebook/page[@id='admin']/field[@name='tags']" position="before">
+        <field name="fees" colspan="2"/>
     </xpath>
 </data>
